[tool.poetry]
name = "tsmppt60-driver"
version = "0.2.1"
description = "Python module to get status of your solar charge controller TS-MPPT-60."
authors = ["Takashi Ando <dodo5522@gmail.com>"]
license = "GPLv2"
readme = "README.md"
packages = [{include = "tsmppt60_driver"}]
homepage = "https://github.com/dodo5522/tsmppt60_driver"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware :: Hardware Drivers",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.5.0"
pytest = "^7.4.4"
pytest-mock = "^3.12.0"
ruff = "^0.1.11"

[tool.ruff]
target-version = "py38"
line-length = 120
extend-exclude = [
  "firebase",
  "infra",
]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
]
ignore = [
  "D203",
  "D105",
  "E501",  # line too long, handled by black
  "B008",  # do not perform function calls in argument defaults
  "C901",  # too complex
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
case-sensitive = true
lines-after-imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
